# mexpr_parser

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  parser.py  parser.rs  sql_parse.py
src/parser/: core.rs  expressions.rs  identifier.rs  keywords.rs  literal.rs  operators.rs
src/parser/expressions/: each.rs  function.rs  if_expression.rs  logical.rs  primary_expressions.rs  record.rs  type_expressions.rs
src/parser/expressions/primary_expressions/: field_access.rs  invocation.rs  item_access.rs  list_expression.rs  parenthesized_expression.rs
