[package]
name = "mexpr_parser"
version = "0.2.2"
edition = "2021"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.17.0"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
unicode_categories = "0.1.1"
